--- a/index.html
+++ b/index.html
@@ -78,30 +78,11 @@
       display: block;
     }
 
-    /* .hero {
-      background: url('your-banner-image.jpg') no-repeat center center/cover;
-      color: white;
-      height: 50vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      text-align: center;
-    }
-
-    .hero h1 {
-      font-size: 2.5rem; /* <-- CHANGE HERE: Reduced from 3rem */
-      /* background-color: rgba(0, 0, 0, 0.5);
-      padding: 1rem 2rem;
-      border-radius: 10px;
-    }  */
-
     .hero {
-      /* --- CHANGES START HERE --- */
-      background: url('images/background2.jpg') no-repeat center center/cover; 
-      background-attachment: fixed; /* Makes the background image fixed while scrolling */
-      position: relative; /* Needed for the overlay pseudo-element */
-      z-index: 0; /* Ensures the overlay and text appear on top of the image */
-      /* --- CHANGES END HERE --- */
+      background: url('images/background2.jpg') no-repeat center center/cover;
+      background-attachment: fixed;
+      position: relative;
+      z-index: 0;
       color: white;
       height: 50vh;
       display: flex;
@@ -110,7 +91,6 @@
       text-align: center;
     }
 
-    /* --- NEW CSS FOR THE OVERLAY --- */
     .hero::before {
       content: "";
       position: absolute;
@@ -118,17 +98,15 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background-color: rgba(0, 0, 0, 0.4); /* Dark semi-transparent overlay */
-      z-index: 1; /* Puts the overlay above the background image */
+      background-color: rgba(0, 0, 0, 0.4);
+      z-index: -1;
     }
 
     .hero h1 {
-      /* --- CHANGES START HERE --- */
-      color: white; /* Explicitly sets the text color to white */
-      font-size: 2.5rem; /* Increased text size from 2.5rem */
-      /* --- CHANGES END HERE --- */
+      color: white;
+      font-size: 2.5rem;
       background-color: rgba(137, 133, 133, 0.6);
-      padding: 1rem 1rem;
+      padding: 1rem;
       border-radius: 10px;
       position: relative;
       z-index: 1;
@@ -277,14 +255,51 @@
         color: #555;
     }
     
+    /* --- Responsive Styles --- */
     @media (max-width: 768px) {
+        header {
+            flex-direction: column;
+            gap: 1rem;
+        }
+
+        .navbar {
+            flex-wrap: wrap;
+            justify-content: center;
+        }
+
+        .hero h1 {
+            font-size: 2rem;
+        }
+
+        .products {
+            gap: 2rem;
+        }
+
+        .product-card {
+            width: 100%;
+            max-width: 300px;
+        }
+
         .craft-item, .craft-item.reverse {
             flex-direction: column;
             text-align: center;
             gap: 2rem;
         }
     }
-    
+
+    @media (max-width: 480px) {
+        .section {
+            padding: 2rem 1rem;
+        }
+
+        .hero h1 {
+            font-size: 1.5rem;
+        }
+
+        #about h2, .craft-text h3 {
+            font-size: 1.8rem;
+        }
+    }
   </style>
 </head>
 <body>
