--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Lunsara | lunsara.com - Sarees & Lungis</title>
   <style>
+    /* --- NEW --- Universal box-sizing rule to fix overflow issues */
+    *, *::before, *::after {
+        box-sizing: border-box;
+    }
+
     body {
       font-family: 'Segoe UI', sans-serif;
       margin: 0;
@@ -184,6 +189,13 @@
       width: 90%;
       max-width: 1200px;
       margin: 2rem auto;
+      text-align: center;
+    }
+    
+    .contact-details {
+      display: inline-block;
+      text-align: left;
+      margin-top: 1rem;
     }
 
     footer {
@@ -223,7 +235,7 @@
         display: flex;
         align-items: center;
         gap: 4rem;
-        text-align: left;
+        text-align: center;
     }
     
     .craft-item.reverse {
@@ -282,8 +294,11 @@
 
         .craft-item, .craft-item.reverse {
             flex-direction: column;
-            text-align: center;
             gap: 2rem;
+        }
+
+        .craft-image img {
+            width: 90%;
         }
     }
 
@@ -383,7 +398,7 @@
       <a href="silk.html" class="product-card-link">
         <div class="product-card">
           <img src="images/silk_saree_collection.jpg" alt="Silk Sarees" />
-          <h3>Silk Sarees</h3>
+          <h3>Kanchipuram Silk Sarees</h3>
           <p>Luxurious silk sarees that define tradition and grace.</p>
         </div>
       </a>
@@ -406,9 +421,11 @@
 
   <section id="contact" class="section">
     <h2>Contact Us</h2>
-    <p>Email: vijayannr07@gmail.com</p>
-    <p>Phone: +91 7904955956, +91 9344805404</p>
-    <p>Address: Podatur Pettai, Tamil Nadu, India</p>
+    <div class="contact-details">
+      <p>Email: vijayannr07@gmail.com</p>
+      <p>Phone: +91 7904955956, +91 9344805404</p>
+      <p>Address: Podatur Pettai, Tamil Nadu, India</p>
+    </div>
   </section>
 
   <footer>
