--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Lunsara | lunsara.com - Sarees & Lungis</title>
   <style>
-    /* --- NEW --- Universal box-sizing rule to fix overflow issues */
     *, *::before, *::after {
         box-sizing: border-box;
     }
@@ -28,8 +27,15 @@
     header h2 {
       display: flex;
       align-items: center;
-      gap: 0.5rem;
+      gap: 0.25rem;
       font-weight: 700;
+      margin: 0;
+    }
+    
+    .logo {
+        height: 40px;
+        width: auto;
+        margin-right: 5px;
     }
 
     header h2 small a {
@@ -46,41 +52,6 @@
     .navbar a {
         color: white;
         text-decoration: none;
-    }
-
-    .dropdown {
-      position: relative;
-      display: inline-block;
-    }
-
-    .dropdown-content {
-      display: none;
-      position: absolute;
-      background-color: white;
-      min-width: 180px;
-      z-index: 1;
-      left: 50%;
-      transform: translateX(-50%);
-      top: calc(100% + 10px);
-      border: 2px solid #8e44ad;
-      border-radius: 5px;
-      box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-    }
-
-    .dropdown-content a {
-      color: #333;
-      padding: 10px 16px;
-      text-decoration: none;
-      display: block;
-      text-align: left;
-    }
-
-    .dropdown-content a:hover {
-      background-color: #f1f1f1;
-    }
-
-    .dropdown:hover .dropdown-content {
-      display: block;
     }
 
     .hero {
@@ -267,7 +238,6 @@
         color: #555;
     }
     
-    /* --- Responsive Styles --- */
     @media (max-width: 768px) {
         header {
             flex-direction: column;
@@ -321,21 +291,15 @@
 
   <header>
     <h2>
+      <img src="images/logo.png" alt="Lunsara Logo" class="logo">
       Lunsara
     </h2>
     <nav class="navbar">
         <a href="#home">Home</a>
-        <div class="dropdown">
-          <a href="#products">Products</a>
-          <div class="dropdown-content">
-            <a href="lungis.html">Lungis</a>
-            <a href="silk-sarees.html">Silk Sarees</a>
-            <a href="printed-sarees.html">Printed Sarees</a>
-          </div>
-        </div>
+        <a href="#products">Products</a>
         <a href="#about">About</a>
         <a href="#contact">Contact</a>
-      </nav>
+    </nav>
   </header>
 
   <section id="home" class="hero">
@@ -398,7 +362,7 @@
       <a href="silk.html" class="product-card-link">
         <div class="product-card">
           <img src="images/silk_saree_collection.jpg" alt="Silk Sarees" />
-          <h3>Kanchipuram Silk Sarees</h3>
+          <h3>Silk Sarees</h3>
           <p>Luxurious silk sarees that define tradition and grace.</p>
         </div>
       </a>
